--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,14 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
+    <!-- Chrome, Firefox, Opera -->
+    <meta content="#ff5c21" name="theme-color" />
+    <!-- Windows Phone -->
+    <meta content="#ff5c21" name="msapplication-navbutton-color" />
+    <!-- iOS Safari -->
+    <meta content="#ff5c21" name="apple-mobile-web-app-status-bar-style" />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
 
     <title>Share Plate</title>
   </head>
