--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Chrome, Firefox, Opera -->
+    <link <!-- Chrome, Firefox, Opera -- />
     <meta content="#ff5c21" name="theme-color" />
     <!-- Windows Phone -->
     <meta content="#ff5c21" name="msapplication-navbutton-color" />
@@ -13,6 +12,10 @@
     <meta content="#ff5c21" name="apple-mobile-web-app-status-bar-style" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
 
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_API_KEY%"
+    ></script>
     <title>Share Plate</title>
   </head>
   <body>
