fix : rebase 후 에러 수정

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
     <meta content="#ff5c21" name="msapplication-navbutton-color" />
     <meta content="#ff5c21" name="apple-mobile-web-app-status-bar-style" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JS_API_KEY%"
+    ></script>
 
     <title>Share Plate</title>
   </head>
