[JinJeon] 주소 설정 기능 추가 (#85)
* feat : kakao.map key 추가 #81

* feat : 지도로 보여주기 #81

* refactor : address modal 재사용성을 위한 네이밍 수정 및 일부 리펙토링

* feat : address 설정 시 필요한 store들의 기능 설정 #80

* fix : 변동 사항에 따른 기타 에러 수정

* refactor : address modal 제거

* refactor : selected address state atom 이름 수정

* refactor : map portal을 address map으로 변경

* style : address map의 스타일 수정

* feat : 주소를 나타내기 위한 marker 추가

* refactor : address detail의 버튼 기능 수정

* feat : 집, 회사 지정 hook 추가 및 적용 #80

* feat : constants 추가

* refactor : location, localStorage store 타입 리펙토링

* feat : address api에 카테고리 검색 및 주소 검색 기능 추가 #80

* feat : address registered 컴포넌트 생성 #80

* feat : address home company 컴포넌트 생성 #80

* refactor : 새로 생성한 컴포넌트로 address setting 컴포넌트 리펙토링 #80

* feat : address portal 컴포넌트에 주변 검색 기능 추가 #80

* feat : address detail 컴포넌트의 집, 회사 등록 기능 및 지도 기능 수정

* refactor : 기타 리펙토링

* refactor : address map의 맵 보여주기 기능 활성화를 위한 리펙토링 #80

* refactor : useGeolocation hook의 재사용성을 위한 리펙토링 #80

* refactor : 기타 리펙토링

* fix : rebase 후 에러 수정

Co-authored-by: seungchan Han <93566353+Han-Seung-Chan@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link <!-- Chrome, Firefox, Opera -- />
     <meta content="#ff5c21" name="theme-color" />
-    <!-- Windows Phone -->
     <meta content="#ff5c21" name="msapplication-navbutton-color" />
-    <!-- iOS Safari -->
     <meta content="#ff5c21" name="apple-mobile-web-app-status-bar-style" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
-
     <script
       type="text/javascript"
-      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_API_KEY%"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JS_API_KEY%"
     ></script>
+
     <title>Share Plate</title>
   </head>
   <body>
