--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta content="#ff5c21" name="theme-color" />
-    <meta content="#ff5c21" name="msapplication-navbutton-color" />
-    <meta content="#ff5c21" name="apple-mobile-web-app-status-bar-style" />
+    <meta content="#fafafa" name="theme-color" />
+    <meta content="#fafafa" name="msapplication-navbutton-color" />
+    <meta content="#fafafa" name="apple-mobile-web-app-status-bar-style" />
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <script
       type="text/javascript"
