--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JS_API_KEY%"
     ></script>
 
-    <title>Share Plate</title>
+    <title>SHARE PLATE</title>
   </head>
   <body>
     <div id="root"></div>
