--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/logo.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta content="#fafafa" name="theme-color" />
@@ -13,7 +13,7 @@
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAO_JS_API_KEY%"
     ></script>
 
-    <title>Share Plate</title>
+    <title>SHARE PLATE</title>
   </head>
   <body>
     <div id="root"></div>
