fix : http 요청에 대해 https로 처리하도록 변경

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/logo.ico" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests" />
     <meta content="#fafafa" name="theme-color" />
     <meta content="#fafafa" name="msapplication-navbutton-color" />
     <meta content="#fafafa" name="apple-mobile-web-app-status-bar-style" />
